--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -37,6 +37,15 @@
             </div>
         {{ end }}
 
+        {{- if ne .Lastmod .Date -}}
+          <div>
+            {{ partial "helper/icon" "edit" }}
+              <time class="article-lastmod">
+                {{- .Lastmod.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
+              </time>
+          </div>
+        {{ end }}
+
         {{ if $showReadingTime }}
             <div>
                 {{ partial "helper/icon" "clock" }}
